# powens-maybe-finance-connector

./: .env.example  .gitignore  Cargo.toml  readme.md
ai-prompts/: expenses.json.example  income.json.example
src/: app_state.rs  csv.rs  db.rs  genai.rs  handlers.rs  lib.rs  main.rs  powens.rs
src/csv/: account.rs  transaction.rs
src/db/: db_base.rs  db_structs.rs
src/genai/: api.rs  gemini_response.rs
src/handlers/: accounts_handlers.rs  transactions_handlers.rs
src/powens/: account.rs  api.rs  transaction.rs  webhook.rs
