[package]
name = "powens-maybe-finance-connector"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
axum = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
strum = { version = "0.27", features = ["derive"] }
regex = "1.11.1"
